src/test/ui/impl-trait/multiple-lifetimes/error-handling-2.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/error-handling-2.rs:6:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/error-handling-2.rs:16:60
   |
LL | fn foo<'a: 'b, 'b, 'c>(x: &'static i32, mut y: &'a i32) -> E<'b, 'c> {
   |                                                            ^^^^^^^^^
   |
note: hidden type `*mut &'a i32` captures the lifetime `'a` as defined on the function body at 16:8
  --> $DIR/error-handling-2.rs:16:8
   |
LL | fn foo<'a: 'b, 'b, 'c>(x: &'static i32, mut y: &'a i32) -> E<'b, 'c> {
   |        ^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0700`.
